# JungleMonkAI

./: .eslintrc.cjs  .gitignore  App.ts  Cargo.toml  README copy.md  README.md  clone.html  console-message-handler.cjs  electron.cjs  index.html  package.json  plugin-manager.cjs  preload.cjs  requirements.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: COMMAND_PALETTE_GUIDE.md  COMPONENTS_USAGE_GUIDE.md  CodexOrchestrator.md  SPLIT_PANEL_GUIDE.md  UI_DESIGN_SYSTEM.md  UI_IMPROVEMENTS_SUMMARY.md  extension-checklist.md  implementation_plan.md  jarvis-core.md  plugins.md  proxmox-shell.md  release-notes.md  ux_research_and_vision.md
docs/design-system/: theme-guide.md
jarvis_core/: JarvisCore.py  __init__.py  config.json  llm.py  models.py
models/: .gitkeep
plugins/ableton-mixer/: manifest.json
plugins/ableton-remote/: manifest.json
plugins/vscode-bridge/: manifest.json
services/: git-service.cjs
src/: App.css  App.tsx  AppLayout.css  config.rs  local_providers.rs  main.rs  main.tsx  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/shaders/: particles.wgsl  plasma.wgsl  raymarch.wgsl
src-tauri/src/: ableton.rs  ai.rs  audio.rs  config.rs  gpu.rs  jarvis.rs  main.rs  midi.rs  settings.rs  vscode.rs
src-tauri/src/git/: mod.rs  secrets.rs
src-tauri/src/models/: mod.rs
src-tauri/src/plugins/: mod.rs
src/api/: claude.rs  github.rs  groq.rs  huggingface.rs  local.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src/components/: FractalLabPresetModal.css  FractalLabPresetModal.tsx  GenLabPresetModal.css  GenLabPresetModal.tsx  GlobalSettingsModal.css  GlobalSettingsModal.tsx  LayerGrid.css  LayerGrid.tsx  PresetControls.css  PresetControls.tsx  PresetSelector.css  PresetSelector.tsx  PreviewControls.tsx  ResourceExplorer.css  ResourceExplorer.tsx  ResourcesModal.css  ResourcesModal.tsx  StatusBar.css  StatusBar.tsx  TopBar.css  TopBar.tsx  VFXControls.tsx  VideoControls.css  VideoControls.tsx
src/components/agents/: AgentPresenceList.css  AgentPresenceList.tsx  AgentQuickConfigDrawer.tsx
src/components/chat/: ChatInterface.css  ChatStatusBar.tsx  ChatTopBar.tsx  ChatWorkspace.tsx  ConversationStatsModal.css  ConversationStatsModal.tsx  SidePanel.css  SidePanel.tsx
src/components/pro/: index.ts  (+3 more)
src/core/: AudioVisualizerEngine.ts  LayerManager.ts  PresetLoader.ts
src/hooks/: useAudio.ts  useCodeAutocomplete.ts  useGithubRepos.ts  useHuggingFaceCatalog.ts  useLaunchpad.ts  useLocalModels.ts  useMidi.ts  usePresetGrid.ts  useProviderDiagnostics.ts  useSidePanelSlots.ts
src/services/: jarvisCoreClient.ts
src/state/: automation.rs  chat.rs  feature.rs  jarvis_orchestrator.rs  mod.rs  resources.rs
src/theme/: ThemeProvider.tsx  animations.ts  global.css  index.ts  responsive.ts  tokens.ts
src/types/: agents.ts  chat.ts  globalSettings.ts  video.ts
src/ui/: chat.rs  header.rs  layout_bridge.rs  live.rs  logs.rs  mod.rs  modals.rs  resource_sidebar.rs  sidebar.rs  tabs.rs  theme.rs  workbench.rs
src/utils/: agentDisplay.ts  aiProviders.ts  clipboard.ts  effects.ts  globalSettings.ts  launchpad.ts  objectPath.ts  presetThumbnails.ts  runtimeBridge.ts  secrets.ts  tokens.ts  vfx.ts  videoCache.ts  videoProviders.ts
templates/vscode_shell/: Cargo.toml  README.md
tests/: aiProviders.test.ts  console-message-handler.test.ts  globalSettings.test.ts  setup.ts  useCodeAutocomplete.test.ts
tests/python/: test_jarvis_core_endpoints.py
types/: global.d.ts
(+199 files in other folders)
