[package]
name = "jungle-lab-studio"
version = "0.1.0"
edition = "2021"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "sync"] }
midir = "0.9"
cpal = "0.15"
rustfft = "6.1"
wgpu = "26"
anyhow = "1.0"
once_cell = "1.18"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
git2 = { version = "0.18", default-features = false, features = ["https", "vendored-libgit2"] }
walkdir = "2.5"
thiserror = "1.0"
urlencoding = "2.1"
aes-gcm = { version = "0.10", features = ["aes"] }
rand = "0.8"
tokio-tungstenite = "0.21"


[build-dependencies]
tauri-build = { version = "1.5", features = [] }
